# proj2dhullsampler

./: .gitignore  README.md  analyzing.ipynb  class_based.ipynb  class_historymatching.ipynb  class_hm.ipynb  common_vars.py  obs_scratch.ipynb  prepare.ipynb  prepare_trainingdata.ipynb  process_observatoin.ipynb  process_simulation.ipynb  pyproject.toml  step1_prepare_trainingdata.ipynb  step2_generate_ensemble_members.ipynb  step3_gp_train_application.ipynb  step4_generate_tfmasks.ipynb  step5_historymathing.ipynb  step6_analysis.ipynb  v6_finetune.ipynb  v6_gp_training_applying.ipynb  v6_mask_generation.ipynb  v6_prepare_trainingdata.ipynb  v6_sample_paras.ipynb  v6_scribble.ipynb
.github/workflows/: ci.yml
config/: config_test.py
funs/: __init__.py  analysis.py  aux.py  hm_class.py  plotting.py  prep_class.py  sampling_functions.py  utils.py
notebooks/: analyzing.ipynb  apply.ipynb  class_hm.ipynb  implementation.ipynb  prepare.ipynb  step6_analysis.ipynb
postpre/: build_ppe38_CAM7_test1.py  process_observatoin.ipynb  process_simulation.ipynb  zonal_plotting.ipynb
proj2dhullsampler/: __init__.py  analysis.py  aux.py  hm_class.py  plotting.py  prep_class.py  preprocess.py  sampling_functions.py  unused_funs.py  utils.py
tests/: test_hm_class.py  test_imports.py  test_sampling_functions.py
utils/: plotting.py
