[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proj2dhullsampler"
version = "0.1.0"
description = "Tools for sampling parameters"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Qingyuan Yang" }
]
dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "matplotlib",
  "seaborn",
  "scipy",
  "joblib",
  "scikit-learn",
  "shapely",
  "alphashape",
  "trimesh",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "ruff"
]

[tool.setuptools]
packages = ["proj2dhullsampler"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
